--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
-body {
+body,
+#root {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  background-color: #282c34;
+  color: #fafafa;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
+  height: 100vh;
   margin: 0;
 }
